[PE] Update painting root & reset cull rect when painting under a filter which moves pixels.

Filters which move pixels may move content which is originally outside of the
cull rect or ancestor clip rects back into view. Therefore we should adjust the painting
root to prevent ancestor clips and cull rects from clipping or culling out the
source of the filter.

Bug: 804670

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I6e1032ecef5fcb5eabb6080bd2f17d8c479dc1e8
Reviewed-on: https://chromium-review.googlesource.com/1033347
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554550}
Former-commit-id: 699177eecef79fd624f813dd53024a03cdd86ed8